[package]
name = "rtf2text"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
loggerv = "0.7"
lazy_static = "1"
clap = { version = "3", default-features = false, features = [ "std", "cargo" ] }
rtf-grimoire = { git = "https://github.com/compenguy/rtf-grimoire.git" }
codepage = "0.1"
encoding_rs = "0.8"
